--- a/projekt01-personal-training-page/index.html
+++ b/projekt01-personal-training-page/index.html
@@ -88,11 +88,11 @@
         <p class="footerzeile">9887086/898903456</p>
         <p class="footerzeile">info@krasseemail.ch</p>
         <!--Social Media Buttons-->
-        <div class="social-media-zeile">
-            <a href="#" class="social-link">
+        <div class="social-media-zeile icon-zeile">
+            <a href="#" class="social-link icon">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="#" class="social-link">
+            <a href="#" class="social-link icon">
                 <i class="fa-brands fa-twitter"></i>
             </a>
         </div>
